--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 bidict==0.21.2
 click==7.1.2
 Flask==1.1.2
+flask-redis==0.4.0
 Flask-SocketIO==5.0.1
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
-pkg-resources==0.0.0
 python-dotenv==0.15.0
 python-engineio==4.0.0
 python-socketio==5.0.3
